@@ -24,6 +24,7 @@ inventory:
 * linux: fix storage size inventory
 * linux: try to set storage serialnumber from mbr partition id or even
   PV UUID when not found (hdparm missing or virtual drive)
+* Fix #604: Only inventory Windows Store on recent win32 platforms
 
 netdiscovery/netinventory:
 * Add BlueCoat proxy appliance serialnumber support
